# pogl

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: camera.cc  camera.hh  main.cc  matrix.cc  matrix.hh  program.cc  program.hh  setup.cc  setup.hh  sphere.cc  sphere.hh  tp1.cc  vector3.cc  vector3.hh
src/shaders/: bubble.frag.glsl  bubble.vert.glsl  laser.frag.glsl  laser.vert.glsl  morph.frag.glsl  morph.vert.glsl  random.frag.glsl  random.vert.glsl  wave.frag.glsl  wave.vert.glsl
